Complete expand.js, update base.html to remove tab2_4.css and add favicon, ensure common.js v16

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RFID Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link href="/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/common.css" rel="stylesheet">
     {% if request.path == '/tab/1' %}
         <link href="/static/css/tab1.css" rel="stylesheet">
     {% elif request.path == '/tab/5' %}
         <link href="/static/css/tab5.css" rel="stylesheet">
-    {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-        <link href="/static/css/tab2_4.css" rel="stylesheet">
     {% endif %}
     {% endblock %}
     {% block extra_head %}{% endblock %}
