Fix Tab 1 500 error, remove tab2_4.css reference, fix formatDate in Tab 3 with defer, update expand.js to v88, suppress Categories warnings

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,13 +45,13 @@
     <script src="/static/js/tab.js"></script>
     {% block scripts %}
         {% if request.path == '/tab/1' %}
-            <script src="/static/js/tab1.js"></script>
+            <script defer src="/static/js/tab1.js"></script>
         {% elif request.path == '/tab/5' %}
-            <script src="/static/js/tab5.js"></script>
+            <script defer src="/static/js/tab5.js"></script>
         {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-            <script src="/static/js/expand.js"></script>
+            <script defer src="/static/js/expand.js"></script>
         {% elif request.path == '/tab/3' %}
-            <script src="/static/js/tab3.js"></script>
+            <script defer src="/static/js/tab3.js"></script>
         {% endif %}
     {% endblock %}
 </body>
