--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RFID Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
-    <link href="/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/common.css" rel="stylesheet">
+    <title>RFID Dashboard - Broadway Tent and Event</title>
+    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/common.css">
+    {% block head %}
     {% if request.path == '/tab/1' %}
-        <link href="/static/css/tab1.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/tab1.css">
     {% elif request.path == '/tab/5' %}
-        <link href="/static/css/tab5.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/tab5.css">
     {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-        <link href="/static/css/tab2_4.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/css/tab2_4.css">
     {% endif %}
     {% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/">RFID DASHBOARD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tab/1">Rental Inventory</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tab/2">Open Contracts</a></li>
@@ -42,7 +41,6 @@
     </div>
 
     <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="/static/lib/htmx/htmx.min.js"></script>
     <script src="/static/js/common.js"></script>
     <script src="/static/js/tab.js"></script>
     {% block scripts %}
@@ -50,9 +48,13 @@
             <script src="/static/js/tab1.js"></script>
         {% elif request.path == '/tab/5' %}
             <script src="/static/js/tab5.js"></script>
-        {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-            <script src="/static/js/expand.js"></script>
+        {% elif request.path == '/tab/2' %}
+            <script src="/static/js/tab2.js"></script>
+        {% elif request.path == '/tab/4' %}
+            <script src="/static/lib/htmx/htmx.min.js"></script>
+            <script src="/static/js/tab4.js"></script>
         {% elif request.path == '/tab/3' %}
+            <script src="/static/js/htmx.min.js"></script>
             <script src="/static/js/tab3.js"></script>
         {% endif %}
     {% endblock %}
